--- a/index.html
+++ b/index.html
@@ -1,40 +1,11 @@
-<!doctype html>
-<html class="no-js" lang="">
-
+<!DOCTYPE html>
+<html lang="en">
 <head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Your Page Title</title>
-
-  <style>
-    /* Add your CSS styles here */
-    body, html {
-      margin: 0;
-      padding: 0;
-      height: 100%;
-      width: 100%;
-    }
-    body {
-      background-image: url('img/public-menu-whats.jpg');
-
-    }
-  </style>
-
-  <meta name="description" content="Your description here">
-  <meta property="og:title" content="Your Page Title">
-  <meta property="og:type" content="website">
-  <meta property="og:url" content="Your Website URL">
-  <meta property="og:image" content="URL to your image">
-  <link rel="icon" href="/favicon.ico" sizes="any">
-  <link rel="icon" href="/icon.svg" type="image/svg+xml">
-  <link rel="apple-touch-icon" href="icon.png">
-  <link rel="manifest" href="site.webmanifest">
-  <meta name="theme-color" content="#fafafa">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Image Display</title>
 </head>
-
 <body>
-<!-- No content needed, as the image covers the whole page -->
-<script src="js/app.js"></script>
+<img src="img/public-menu-whats.jpg" alt="Descriptive Alt Text">
 </body>
-
 </html>
